# persistent-uuid

./: .travis.yml  Makefile  persist-uuid.cabal  persistent-uuid.cabal
Database/Persist/Postgresql/Types/: UUID.hs
Database/Persist/Sqlite/Types/: UUID.hs
Database/Persist/Types/: UUID.hs
test/: Main.hs
