name:                persistent-uuid
version:             0.1.0.1
synopsis:            Persistent bindings for UUID type
license:             PublicDomain
author:              Adam Bergmark
maintainer:          Viktor Miroshnikov me@vmiroshnikov.com
build-type:          Simple
cabal-version:       >=1.8

executable persist-uuid
  main-is: Main.hs
  ghc-options: -Wall
  build-depends:
       base
     , bytestring
     , mtl
     , persistent
     , persistent-template
     , uuid
