name:                persistent-uuid
version:             0.1.0.2
synopsis:            Persistent bindings for UUID type
license:             PublicDomain
author:              Adam Bergmark
maintainer:          Viktor Miroshnikov me@vmiroshnikov.com
build-type:          Simple
cabal-version:       >=1.8

library 
  ghc-options: -Wall
  build-depends:
       base
     , bytestring
     , mtl
     , persistent
     , persistent-template
     , uuid
  exposed-modules: Database.Persist.Postgresql.Types.UUID 
               , Database.Persist.Sqlite.Types.UUID 

test-suite test
  type:          exitcode-stdio-1.0
  main-is: test/Main.hs
  ghc-options: -Wall
  build-depends:
       base
     , bytestring
     , mtl
     , persistent
     , persistent-template
     , persistent-sqlite
     , uuid
